# CppBitonic_sort

./: CMakeLists.txt  README.md  main.cpp  time.cpp
kernel/: bi_sort.cl  bi_sort_merge.cl
tests/: CMakeLists.txt
tests/e2e/io/: 001.ans  002.ans
